<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_gohan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gohan"
        android:scaleType="center"
        />

    <RelativeLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:background="#cd8800"
        android:layout_alignParentBottom="true"
        >

        <include android:id="@+id/desc" layout="@layout/description"/>

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gohanTextt"
            android:textSize="30sp"
            android:paddingEnd="20dp"
            android:layout_below="@id/desc"
            android:fontFamily="@font/saiyansans"
            android:textColor="#ffffff"

            />

        <TextView
            android:id="@+id/gender_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculinoTextt"
            android:textSize="30sp"
            android:layout_toEndOf="@id/name_detail"
            android:paddingEnd="10dp"
            android:layout_below="@id/desc"
            android:fontFamily="@font/saiyansans"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/planet_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tierraTextt"
            android:textSize="30sp"
            android:layout_toRightOf="@id/gender_detail"
            android:paddingEnd="10dp"
            android:layout_below="@id/desc"
            android:fontFamily="@font/saiyansans"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/species_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humanoTextt"
            android:textSize="30sp"
            android:layout_toEndOf="@id/planet_detail"
            android:layout_below="@id/desc"
            android:fontFamily="@font/saiyansans"
            android:textColor="#ffffff"
            />


    </RelativeLayout>

</RelativeLayout>