<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatorActivity"
    android:background="@drawable/fondo_info">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="86dp"
        app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent"
                android:background="#7E7C7C"
                android:padding="14dp"
                />

            <TextView
                android:id="@+id/creators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creators_text"
                android:textSize="25sp"
                android:layout_gravity="center"

                />

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/cristobal_canales"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:text="@string/felipe_carre_o"
                android:textSize="20sp"

                />



    </androidx.cardview.widget.CardView>

    </RelativeLayout>